Issue#SB-21097 Need to hide Scrollbar on right side

--- a/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
+++ b/src/app/client/src/app/modules/discussion/components/forum/forum.component.scss
@@ -4,6 +4,7 @@
         padding: 0;
         border-radius: 0;
     }
+
     iframe {
         width: 100%;
         height: 100%;
@@ -21,5 +22,9 @@
             background: var(--black);
             color: var(--white);
         }
+    }
+    //body class//
+    .o-y-hide{
+      overflow: hidden;
     }
 }
